--- a/trustpoint/templates/pki/issuing_cas/request_cert_est.html
+++ b/trustpoint/templates/pki/issuing_cas/request_cert_est.html
@@ -33,15 +33,16 @@
                     <div>{{ issuing_ca.remote_port }}</div>
                 </div>
                 <div>
-                    <div>{% trans 'Current Certificate' %}</div>
+                    <div>{% trans 'Trust Store' %}</div>
                     <div>
-                        {% if issuing_ca.credential.certificate.common_name|slice:":5" == "Temp-" %}
-                            <span class="text-warning">{% trans 'Temporary Certificate' %}</span>
+                        {% if issuing_ca.no_onboarding_config.trust_store %}
+                            <a href="{% url 'pki:truststore-detail' pk=issuing_ca.no_onboarding_config.trust_store.pk %}">{{ issuing_ca.no_onboarding_config.trust_store.unique_name }}</a>
                         {% else %}
-                            {{ issuing_ca.credential.certificate.common_name }}
+                            <span class="text-warning">{% trans 'No trust store configured (insecure)' %}</span>
                         {% endif %}
                     </div>
                 </div>
+
             </div>
 
             <div class="alert alert-warning mt-3" role="alert">
