--- a/trustpoint/templates/pki/issuing_cas/request_cert_est.html
+++ b/trustpoint/templates/pki/issuing_cas/request_cert_est.html
@@ -33,6 +33,10 @@
                     <div>{{ issuing_ca.remote_port }}</div>
                 </div>
                 <div>
+                    <div>{% trans 'Remote Path' %}</div>
+                    <div>{{ issuing_ca.remote_path }}</div>
+                </div>
+                <div>
                     <div>{% trans 'Trust Store' %}</div>
                     <div>
                         {% if issuing_ca.no_onboarding_config.trust_store %}
