--- a/trustpoint/templates/pki/issuing_cas/request_cert_cmp.html
+++ b/trustpoint/templates/pki/issuing_cas/request_cert_cmp.html
@@ -35,7 +35,7 @@
                         {% if issuing_ca.no_onboarding_config.trust_store %}
                             <a href="{% url 'pki:truststore-detail' pk=issuing_ca.no_onboarding_config.trust_store.pk %}">{{ issuing_ca.no_onboarding_config.trust_store.unique_name }}</a>
                         {% else %}
-                            <span class="text-warning">{% trans 'No trust store configured (insecure)' %}</span>
+                            <span class="text-muted">{% trans 'Not configured' %}</span>
                         {% endif %}
                     </div>
                 </div>
