Made entire script moduler for better handling, UI chnages

--- a/trustpoint/templates/pki/cert_profiles/config.html
+++ b/trustpoint/templates/pki/cert_profiles/config.html
@@ -80,6 +80,9 @@
 {% endif %}
 
 <link rel="stylesheet" href="{% static 'css/profile-builder-styles.css' %}">
+
+<script src="{% static 'js/fields-catalog.js' %}"></script>
 <script src="{% static 'js/profile-builder.js' %}"></script>
+
 
 {% endblock content %}
