--- a/trustpoint/templates/pki/issuing_cas/request_cert_est.html
+++ b/trustpoint/templates/pki/issuing_cas/request_cert_est.html
@@ -36,7 +36,11 @@
                 <div>
                     <div>{% trans 'Trust Store' %}</div>
                     <div>
-                        <a href="{% url 'pki:truststore-detail' pk=issuing_ca.no_onboarding_config.trust_store.pk %}">{{ issuing_ca.no_onboarding_config.trust_store.unique_name }}</a>
+                        {% if issuing_ca.no_onboarding_config.trust_store %}
+                            <a href="{% url 'pki:truststore-detail' pk=issuing_ca.no_onboarding_config.trust_store.pk %}">{{ issuing_ca.no_onboarding_config.trust_store.unique_name }}</a>
+                        {% else %}
+                            <span class="text-muted">{% trans 'Not configured' %}</span>
+                        {% endif %}
                     </div>
                 </div>
 
