--- a/trustpoint/templates/pki/issuing_cas/add/method_select.html
+++ b/trustpoint/templates/pki/issuing_cas/add/method_select.html
@@ -23,7 +23,7 @@
                     <hr class="mb-4">
                     <a href="{% url 'pki:issuing_cas-add-request-est' %}" class="btn btn-primary min-width-30 mb-3">{% trans 'Request Issuing CA Certificate Using EST' %}</a>
                     <br>
-                    <a href="{% url 'pki:issuing_cas-add-request-cmp' %}" class="btn btn-primary min-width-30 mb-3 disabled" aria-disabled="true">{% trans 'Request Issuing CA Certificate Using CMP' %}</a>
+                    <a href="{% url 'pki:issuing_cas-add-request-cmp' %}" class="btn btn-primary min-width-30 mb-3">{% trans 'Request Issuing CA Certificate Using CMP' %}</a>
 
 
                     <h2>{% trans 'Configure a Remote Issuing CA' %}</h2>
