Added a side bar so user can use it to fill profilebuilder JSON

--- a/trustpoint/templates/pki/cert_profiles/includes/profile-builder-sidebar.html
+++ b/trustpoint/templates/pki/cert_profiles/includes/profile-builder-sidebar.html
@@ -1,6 +1,6 @@
 <div id="profile-builder-sidebar" class="tp-pb-sidebar">
   <div class="tp-pb-header">
-    <span class="tp-pb-title">Insert Fields Needed In Cert</span>
+    <span class="tp-pb-title">Select a Card to Insert</span>
     <button type="button" class="tp-pb-close" data-pb-close>×</button>
   </div>
 
