--- a/trustpoint/templates/pki/issuing_cas/config.html
+++ b/trustpoint/templates/pki/issuing_cas/config.html
@@ -53,10 +53,10 @@
                         <div>
                             <div>{% trans 'Issuing CA Certificate' %}</div>
                             <div>
-                                {% if issuing_ca.credential.certificate %}
-                                    <a href="{% url 'pki:certificate-detail' pk=issuing_ca.credential.certificate.id %}">
-                                        {% if issuing_ca.credential.certificate.common_name %}
-                                            CN: {{ issuing_ca.credential.certificate.common_name }}
+                                {% if issuing_ca.ca_certificate_model %}
+                                    <a href="{% url 'pki:certificate-detail' pk=issuing_ca.ca_certificate_model.id %}">
+                                        {% if issuing_ca.ca_certificate_model.common_name %}
+                                            CN: {{ issuing_ca.ca_certificate_model.common_name }}
                                         {% else %}
                                             <h3>{% trans 'Issuing CA Certificate' %}</h3>
                                         {% endif %}
@@ -65,7 +65,7 @@
                                     <span class="text-muted">{% trans '(Certificate pending)' %}</span>
                                 {% endif %}
                             </div>
-                            {% for certificate_chain_order in issuing_ca.credential.ordered_certificate_chain_queryset %}
+                            {% for certificate_chain_order in certificate_chain %}
                                 {% if forloop.last %}
                                     <div>{% trans 'Root CA Certificate' %}</div>
                                     <div>
@@ -107,8 +107,8 @@
                     </div>
 
                     <h3>
-                        {% if issuing_ca.credential.certificate %}
-                            {% if issuing_ca.credential.certificate.subject_public_bytes == issuing_ca.credential.certificate.issuer_public_bytes %}
+                        {% if issuing_ca.ca_certificate_model %}
+                            {% if issuing_ca.ca_certificate_model.subject_public_bytes == issuing_ca.ca_certificate_model.issuer_public_bytes %}
                                 {% trans 'Issuing CA Certificate (This is a self-signed Root CA Certificate)' %}
                             {% else %}
                                 {% trans 'Issuing CA Certificate' %}
@@ -118,21 +118,21 @@
                         {% endif %}
                     </h3>
                     <hr class="hr-m">
-                    {% if issuing_ca.credential.certificate %}
+                    {% if issuing_ca.ca_certificate_model %}
                     <div class="tp-kvp-list">
                         <div>
                             <div>{% trans 'Issuing CA Certificate' %}</div>
                             <div>
-                                <a href="{% url 'pki:certificate-detail' pk=issuing_ca.credential.certificate.id %}">
-                                    {% if issuing_ca.credential.certificate.common_name %}
-                                        CN: {{ issuing_ca.credential.certificate.common_name }}
+                                <a href="{% url 'pki:certificate-detail' pk=issuing_ca.ca_certificate_model.id %}">
+                                    {% if issuing_ca.ca_certificate_model.common_name %}
+                                        CN: {{ issuing_ca.ca_certificate_model.common_name }}
                                     {% else %}
                                         {% trans 'Issuing CA Certificate' %}
                                     {% endif %}
                                 </a>
                             </div>
                         </div>
-                        {% with issuing_ca_certificate=issuing_ca.credential.certificate %}
+                        {% with issuing_ca_certificate=issuing_ca.ca_certificate_model %}
                             <div>
                                 <div>{% trans 'Serial Number' %}</div>
                                 <div>{{ issuing_ca_certificate.serial_number }}</div>
@@ -190,73 +190,7 @@
                     {% endif %}
 
                     <div>
-                        {% if issuing_ca.credential.certificate and issuing_ca.issuing_ca_certificate.subject_public_bytes != issuing_ca.issuing_ca_certificate.issuer_public_bytes %}
-                            <h2>{% trans 'Root CA Certificate' %}</h2>
-                            <hr class="hr-m">
-                            <div class="tp-kvp-list">
-                            <div>
-                                <div>{% trans 'Root CA Certificate' %}</div>
-                                <div>
-                                    <a href="{% url 'pki:certificate-detail' pk=issuing_ca.issuing_ca_certificate.id %}">
-                                        {% if issuing_ca.root_ca_certificate.common_name %}
-                                            CN: {{ issuing_ca.root_ca_certificate.common_name }}
-                                        {% else %}
-                                            {% trans 'Root CA Certificate' %}
-                                        {% endif %}
-                                    </a>
-                                </div>
-                            </div>
-                            <div>
-                                <div>{% trans 'Serial Number' %}</div>
-                                <div>{{ issuing_ca.root_ca_certificate.serial_number }}</div>
-                            </div>
-                            <div>
-                                <div>{% trans 'Fingerprint (SHA256)' %}</div>
-                                <div>{{ issuing_ca.root_ca_certificate.sha256_fingerprint }}</div>
-                            </div>
-                            <div>
-                                <div>{% trans 'Not valid before' %}</div>
-                                <div>{{ issuing_ca.root_ca_certificate.not_valid_before }}</div>
-                            </div>
-                            <div>
-                                <div>{% trans 'Not valid after' %}</div>
-                                <div>{{ issuing_ca.root_ca_certificate.not_valid_after }}</div>
-                            </div>
-
-                            <div>
-                                <div>{% trans 'Public Key Algorithm OID' %}</div>
-                                <div>{{ issuing_ca.root_ca_certificate.spki_algorithm_oid }}</div>
-                            </div>
-
-                            <div>
-                                <div>{% trans 'Public Key Algorithm' %}</div>
-                                <div>{{ issuing_ca.root_ca_certificate.spki_algorithm }}</div>
-                            </div>
-
-                            {% if cert.issuer and cert.spki_ec_curve_oid != 'None' %}
-                                <div>
-                                    <div>{% trans 'Public Key Curve OID' %}</div>
-                                    <div>{{ issuing_ca.root_ca_certificate.spki_ec_curve_oid }}</div>
-                                </div>
-                            {% endif %}
-
-                            {% if cert.issuer and cert.spki_ec_curve %}
-                                <div>
-                                    <div>{% trans 'Public Key Curve' %}</div>
-                                    <div>{{ issuing_ca.root_ca_certificate.spki_ec_curve }}</div>
-                                </div>
-                            {% endif %}
-
-                            <div>
-                                <div>{% trans 'Signature Algorithm Key Size' %}</div>
-                                <div>
-                                    {{ issuing_ca.root_ca_certificate.spki_key_size }} Bits
-                                </div>
-                            </div>
-
-                        {% endif %}
-
-                        {% if not issuing_ca.credential.certificate or issuing_ca.credential.certificate.common_name|slice:":5" == "Temp-" %}
+                        {% if not issuing_ca.ca_certificate_model or issuing_ca.ca_certificate_model.common_name|slice:":5" == "Temp-" %}
                         <h3>{% trans 'Certificate Request' %}</h3>
                         <hr class="hr-m">
                         <div class="tp-kvp-list">
@@ -287,7 +221,7 @@
                         </div>
                         {% endif %}
 
-                        {% if issuing_ca.credential.certificate %}
+                        {% if issuing_ca.ca_certificate_model %}
                         <h3>{% trans 'CRL' %}</h3>
                         <hr class="hr-m">
                         <div class="tp-kvp-list">
