--- a/trustpoint/templates/pki/issuing_cas/truststore_association.html
+++ b/trustpoint/templates/pki/issuing_cas/truststore_association.html
@@ -21,6 +21,14 @@
                     <div class="alert alert-info" role="alert">
                         <strong>{% trans 'CMP Certificate:' %}</strong> {% trans 'Import the Issuing CA certificate of the remote PKI. This certificate is used to identify the recipient CA and verify responses.' %}
                     </div>
+                    {% elif is_est_ra %}
+                    <div class="alert alert-info" role="alert">
+                        {% if est_ra_step == 1 %}
+                        <strong>{% trans 'EST RA - Step 1/2 (CA Chain):' %}</strong> {% trans 'Import the Issuing CA chain. This establishes the RA certificate and hierarchy.' %}
+                        {% else %}
+                        <strong>{% trans 'EST RA - Step 2/2 (TLS Certificate):' %}</strong> {% trans 'Import the TLS server certificate. This certificate is used for HTTPS connection security to the remote EST server.' %}
+                        {% endif %}
+                    </div>
                     {% else %}
                     <div class="alert alert-info" role="alert">
                         <strong>{% trans 'EST Certificate:' %}</strong> {% trans 'Import the TLS server certificate of the remote PKI. This certificate is used for HTTPS connection security.' %}
