--- a/trustpoint/templates/pki/cert_profiles/includes/profile-builder-sidebar.html
+++ b/trustpoint/templates/pki/cert_profiles/includes/profile-builder-sidebar.html
@@ -18,6 +18,7 @@
   </div>
 
   <div class="tp-pb-footer">
-    Press <kbd>Ctrl+K</kbd> to toggle  <kbd>Esc</kbd> to close
+    <span>Press <kbd>Ctrl+K</kbd> to toggle</span>
+    <span><kbd>Esc</kbd> to close</span>
   </div>
 </div>
