Display information in config

--- a/trustpoint/templates/pki/issuing_cas/config.html
+++ b/trustpoint/templates/pki/issuing_cas/config.html
@@ -106,6 +106,8 @@
                         </div>
                     </div>
 
+                    {% include 'pki/issuing_cas/includes/remote_ca_config.html' %}
+
                     <h3>
                         {% if issuing_ca.ca_certificate_model %}
                             {% if issuing_ca.ca_certificate_model.subject_public_bytes == issuing_ca.ca_certificate_model.issuer_public_bytes %}
